deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecow-app
  labels:
    app: wisecow
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wisecow
  template:
    metadata:
      labels:
        app: wisecow
    spec:
      containers:
        - name: wisecow
          image: 88151/wisecow-app:v1   
          ports:
            - containerPort: 3000
